ensure "Start" button is visible in "enter" mode
- Sizing/layout of grid ensured start button was just below visible
  portion of the screen.

--- a/src/components/sudoku-grid/sudoku-grid.css
+++ b/src/components/sudoku-grid/sudoku-grid.css
@@ -87,3 +87,8 @@ text.inner-pencil,
     background-color: var(--button-bg-color);
     border-radius: 0.1em;
 }
+
+.portrait .buttons a {
+    font-size: 1rem;
+    margin: 0.2em;
+}
